<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="controller.MainActivity"><![CDATA[

    />







    ]]>

    <Button
        android:text="@string/btnPlaces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnPlaces"
        tools:ignore="UnknownId"

        android:paddingTop="10dp"
        android:height="80dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/btnAddPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnAddPlace"
        tools:ignore="UnknownId"
        android:paddingTop="10dp"
        android:height="80dp"
        android:layout_below="@+id/btnPlaces"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp" />

    <Button
        android:text="@string/btnFav"
        android:id="@+id/btnFav"
        tools:ignore="UnknownId"
        android:paddingTop="10dp"
        android:height="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAddPlace"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp" />

    <Button
        android:text="@string/btnProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnProfile"
        tools:ignore="UnknownId"

        android:paddingTop="10dp"
        android:height="80dp"
        android:layout_below="@+id/btnFav"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp" />
</RelativeLayout>
