<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/lbl_your_name" android:text="Place name"
            android:layout_height="wrap_content"
            android:layout_width="110dp" />

        <EditText
            android:id="@+id/dialogName"
            android:layout_width="match_parent"  android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionDone" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <TextView
            android:id="@+id/lblNewImg" android:text="Inage: "
            android:layout_height="wrap_content"
            android:layout_width="110dp" />

        <LinearLayout
            android:orientation="vertical" android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <ImageView
                android:id="@+id/newImg"
                android:layout_height="158dp"
                android:padding="5dp"
                android:layout_width="207dp" />

            <Button
                android:text="@string/bntpickImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnPickImg"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/DialogPalceDescription"
            android:layout_height="wrap_content"
            android:id="@+id/txtDesc"
            android:layout_weight="1"
            android:layout_width="110dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="177dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/dialogDesc"
            android:layout_weight="21.89" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/btnDialogSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDialogSave"
            android:layout_weight="1"
            />

        <Button
            android:text="@string/btnDialogCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDialogCancel"
            android:layout_weight="1"
             />

    </LinearLayout>

</LinearLayout>